CORE-876 - Fixed notifications being hidden behind the modal view. Moved loading styles into the player so the spinner is styled whilst waiting for resources to load

--- a/runtime/css/loading.less
+++ b/runtime/css/loading.less
@@ -24,7 +24,7 @@ permissions and limitations under the License.
         left: 0;
         width: 100%;
         height: 100%;
-        z-index: 1000;
+        z-index: 1100;
         background-color: rgba(255, 255, 255, 0.5);
     }
 
@@ -35,6 +35,7 @@ permissions and limitations under the License.
         display: block;
         top: 40%;
         font-size: 2em;
+        padding: 0 2em;
     }
 
     /* outer */
